--- a/www/css/index.css
+++ b/www/css/index.css
@@ -113,3 +113,8 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+
+.user-actions {
+    font-size: large;
+}
+
